--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-kapt"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 28
     buildToolsVersion "30.0.0"
 
     defaultConfig {
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -43,9 +46,15 @@ dependencies {
     /*  */
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.github.bumptech.glide:glide:4.11.0"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    kapt                        "androidx.room:room-compiler:2.2.5"
+    implementation              "androidx.room:room-runtime:2.2.5"
+    annotationProcessor         "androidx.room:room-compiler:2.2.5"
+
     /*  */
 
 
