--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "kotlin-kapt"
 
+buildscript {
+
+    ext {
+        lifecycleVersion = "2.2.0"
+    }
+
+}
+
 android {
     compileSdkVersion 28
     buildToolsVersion "30.0.0"
@@ -50,6 +58,10 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.github.bumptech.glide:glide:4.11.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation               "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    implementation               "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation               "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
 
     kapt                        "androidx.room:room-compiler:2.2.5"
     implementation              "androidx.room:room-runtime:2.2.5"
